--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ buildscript {
                 'fineract-client',
                 'core',
                 'service',
-                'starter'
+                'starter',
+                'karate-tests'
             ].contains(it.name)
         }
         fineractPublishProjects = subprojects.findAll{
@@ -152,6 +153,8 @@ allprojects  {
             "**/banner.txt",
             "**/build.gradle.mustache",
             "**/pom.mustache",
+            '**/*.properties',
+            '**/*.js'
         ])
         strictCheck true
     }
@@ -246,6 +249,9 @@ allprojects  {
             "**/git.properties",
             ".mailmap",
             '**/images/diag-*.svg',
+            '**/*.properties',
+            '**/*.js',
+            '**/target/**'
         ]
     }
 }
@@ -532,13 +538,14 @@ configure(project.fineractJavaProjects) {
 
     test {
         useJUnitPlatform()
-        dependsOn 'cucumber'
 
         if (project.hasProperty('excludeTests')) {
             filter {
                 excludeTestsMatching project.property('excludeTests')
             }
         }
+
+        testLogging.showStandardStreams = true
     }
 
     testlogger {
