--- a/karate-tests/dependencies.gradle
+++ b/karate-tests/dependencies.gradle
@@ -16,16 +16,17 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-rootProject.name='fineract'
-include ':module:dummy:core'
-include ':module:dummy:service'
-include ':module:dummy:starter'
-include ':custom:foo:service'
-include ':fineract-provider'
-include ':fineract-war'
-include ':integration-tests'
-include ':twofactor-tests'
-include ':oauth2-tests'
-include ':fineract-client'
-include ':fineract-doc'
-include 'karate-tests'
+dependencies {
+
+
+    testImplementation(files("$rootDir/fineract-provider/build/classes/java/main/"),
+            project(path: ':fineract-provider', configuration: 'runtimeElements'),
+            'com.intuit.karate:karate-junit5:1.3.1',
+            'com.intuit.karate:karate-apache:0.9.6',
+    )
+
+    implementation ('com.github.javafaker:javafaker:1.0.2'){ exclude module: 'org.yaml' }
+    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
+    implementation 'org.yaml:snakeyaml:1.33'
+
+}
