--- a/karate-tests/src/test/resources/karate.properties
+++ b/karate-tests/src/test/resources/karate.properties
@@ -17,6 +17,7 @@
 # under the License.
 #
 
-cucumber.publish.quiet=true
-cucumber.glue=org.apache.fineract
 server.port=${FINERACT_SERVER_PORT:8443}
+fineract.username=${FINERACT_TEST_USERNAME:mifos}
+fineract.password=${FINERACT_TEST_PASS:password}
+fineract.tenantId=${FINERACT_TEST_TENANT:default}
