--- a/karate-tests/src/test/resources/karate.properties
+++ b/karate-tests/src/test/resources/karate.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-server.port=${FINERACT_SERVER_PORT:8443}
-fineract.username=${FINERACT_TEST_USERNAME:mifos}
-fineract.password=${FINERACT_TEST_PASS:password}
-fineract.tenantId=${FINERACT_TEST_TENANT:default}
+server.port=${FINERACT_SERVER_PORT}
+fineract.testuser=${FINERACT_TEST_USER}
+fineract.testpass=${FINERACT_TEST_PASS}
+fineract.tenantId=${FINERACT_TEST_TENANT}
