--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -154,4 +154,6 @@ fineract.activemq.loanRepaymentReminderQueue=${LOAN_REPAYMENT_REMINDER_QUEUE:Loa
 fineract.activemq.loanRepaymentConfirmationQueue=${LOAN_REPAYMENT_CONFIRMATION_QUEUE:LoanRepaymentConfirmation}
 fineract.activemq.loanOverdueConfirmationQueue=${LOAN_OVERDUE_REMINDER_QUEUE:LoanOverdueReminder}
 fineract.activemq.blockerUrl=${ACTIVEMQ_BLOCKER_URL:tcp://localhost:61616}
+fineract.activemq.blockerUsername=${ACTIVEMQ_BLOCKER_USERNAME:admin}
+fineract.activemq.blockerPassword=${ACTIVEMQ_BLOCKER_PASSWORD:admin}
 fineract.activemq.standingInstructionInsufficientBalanceFailureQueue=${INSUFFICIENT_BALANCE_NOTIFICATION_QUEUE:SIFailureInsufficientBalanceNotificationQueue}
