Correcting properties typo

--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -153,7 +153,7 @@ fiter.features.ff4j=${FF4J_FILE_NAME:ff4j-feature-template.yml}
 fineract.activemq.loanRepaymentReminderQueue=${LOAN_REPAYMENT_REMINDER_QUEUE:LoanRepaymentReminders}
 fineract.activemq.loanRepaymentConfirmationQueue=${LOAN_REPAYMENT_CONFIRMATION_QUEUE:LoanRepaymentConfirmation}
 fineract.activemq.loanOverdueConfirmationQueue=${LOAN_OVERDUE_REMINDER_QUEUE:LoanOverdueReminder}
-fineract.activemq.blockerUrl=${ACTIVEMQ_BLOCKER_URL:tcp://localhost:61616}
-fineract.activemq.blockerUsername=${ACTIVEMQ_BLOCKER_USERNAME:admin}
-fineract.activemq.blockerPassword=${ACTIVEMQ_BLOCKER_PASSWORD:admin}
+fineract.activemq.brokerUrl=${ACTIVEMQ_BROKER_URL:tcp://localhost:61616}
+fineract.activemq.brokerUsername=${ACTIVEMQ_BROKER_USERNAME:admin}
+fineract.activemq.brokerPassword=${ACTIVEMQ_BROKER_PASSWORD:admin}
 fineract.activemq.standingInstructionInsufficientBalanceFailureQueue=${INSUFFICIENT_BALANCE_NOTIFICATION_QUEUE:SIFailureInsufficientBalanceNotificationQueue}
