Report enhancements https://fiterio.atlassian.net/browse/UC-63

--- a/fineract-provider/pentahoReports/Aging Detail.properties
+++ b/fineract-provider/pentahoReports/Aging Detail.properties
@@ -18,3 +18,6 @@ label.column.Days.in.Arrears.Band=Days in Arrears Band
 lable.title.Aging.Detail=Aging Detail
 
 lable.title.group.Branch=Branch
+label.column.loan.officer = Loan Officer
+label.column.Disbursal.amount= Disbursal Amount
+label.column.total.outstanding.amount= Total Outstanding
