--- a/fineract-provider/pentahoReports/Written-Off Loans.properties
+++ b/fineract-provider/pentahoReports/Written-Off Loans.properties
@@ -15,3 +15,4 @@ label.column.Reason.For.Write.Off=Reason For Write-Off
 label.column.Loan.Officer.Name=Loan Officer Name
 label.group.title.Branch=Branch
 label.title.Written.Off.Loans=Written-Off Loans
+label.column.recovery.amount= Recovery Amount
