--- a/fineract-provider/pentahoReports/Active Loans by Disbursal Period.properties
+++ b/fineract-provider/pentahoReports/Active Loans by Disbursal Period.properties
@@ -18,3 +18,5 @@ label.groupby.column.Disbursed.Date=Disbursed Date
 label.groupby.column.Branch=Branch
 lable.title.Disbursal.Period.from=Disbursal  Period    from
 lable.title.Disbursal.Period.to=To
+label.column.Disbursal.amount= Disbursal Amount
+label.column.total.outstanding.amount= Total Outstanding
