Report enhancements https://fiterio.atlassian.net/browse/UC-63

--- a/fineract-provider/pentahoReports/Aging Detail.properties
+++ b/fineract-provider/pentahoReports/Aging Detail.properties
@@ -21,3 +21,4 @@ lable.title.group.Branch=Branch
 label.column.loan.officer = Loan Officer
 label.column.Disbursal.amount= Disbursal Amount
 label.column.total.outstanding.amount= Total Outstanding
+label.column.recovery.officer = Recovery Officer
