--- a/fineract-provider/pentahoReports/Written-Off Loans.properties
+++ b/fineract-provider/pentahoReports/Written-Off Loans.properties
@@ -16,3 +16,4 @@ label.column.Loan.Officer.Name=Loan Officer Name
 label.group.title.Branch=Branch
 label.title.Written.Off.Loans=Written-Off Loans
 label.column.recovery.amount= Recovery Amount
+label.column.recovery.officer = Recovery Officer
