--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -160,3 +160,4 @@ fineract.activemq.brokerPassword=${ACTIVEMQ_BROKER_PASSWORD:admin}
 fineract.activemq.standingInstructionInsufficientBalanceFailureQueue=${INSUFFICIENT_BALANCE_NOTIFICATION_QUEUE:SIFailureInsufficientBalanceNotificationQueue}
 fineract.configuration.resetNuban=${CONFIGURATION_RESET_NUBAN:false}
 fineract.configuration.nubanCode=${CONFIGURATION_NUBAN_CODE:00000}
+fineract.configuration.isPentahoReportEngineRunOnPostgres=${IS_PENTAHO_REPORT_ENGINE_RUN_ON_POSTGRES:false}
