--- a/fineract-provider/pentahoReports/Active Loans - Details.properties
+++ b/fineract-provider/pentahoReports/Active Loans - Details.properties
@@ -2,6 +2,7 @@ label.column.Office/Branch=Office/Branch
 label.column.Currency=Currency
 label.column.loan.Officer=Loan Officer
 label.column.client=Client
+label.column.loan.external.id=External Id
 label.column.Loan.Account.No=Loan Account No.
 label.column.Product=Product
 label.column.Fund=Fund
