--- a/fineract-war/build.gradle
+++ b/fineract-war/build.gradle
@@ -29,9 +29,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.poi:poi:4.1.2'
-    implementation 'org.apache.poi:poi-ooxml:4.1.2'
-    implementation 'org.apache.poi:poi-ooxml-schemas:4.1.2'
+    implementation 'org.apache.poi:poi:5.2.3'
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'
+    implementation 'org.apache.poi:poi-ooxml-full:5.2.3'
 
     //Pentaho
     fileTree('thirdparty') {
