--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -232,7 +232,7 @@ bootRun {
 
         implementation 'org.apache.poi:poi:5.2.3'
         implementation 'org.apache.poi:poi-ooxml:5.2.3'
-        implementation 'org.apache.poi:poi-ooxml-schemas:4.1.2'
+        implementation 'org.apache.poi:poi-ooxml-full:5.2.3'
         implementation 'org.openjdk.nashorn:nashorn-core:15.1'
         implementation 'org.codehaus.groovy:groovy-jsr223:3.0.10'
 
