--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,3 +91,7 @@ services:
       - FINERACT_DEFAULT_TENANTDB_NAME=fineract_default
       - FINERACT_DEFAULT_TENANTDB_DESCRIPTION=Default Demo Tenant
       - JAVA_TOOL_OPTIONS="-Xmx1G"
+      # NOTE: env vars to select which authentication mode. It is exclusive option
+      - FINERACT_SECURITY_BASICAUTH_ENABLED=false
+      - FINERACT_SECURITY_OAUTH_ENABLED=true
+      - FINERACT_JWT_ISSUER_URL=http://10.2.3.21:8083/auth/realms/master      
