--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -97,7 +97,7 @@ server.tomcat.threads.max=${FINERACT_SERVER_TOMCAT_THREADS_MAX:200}
 server.tomcat.threads.min-spare=${FINERACT_SERVER_TOMCAT_THREADS_MIN_SPARE:10}
 
 # OAuth authorisation server endpoint
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${FINERACT_JWT_ISSUER_URL:http://10.2.3.21:8083/auth/realms/master}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${FINERACT_JWT_ISSUER_URL:http://10.2.3.21:8083/auth/realms/corebanking}
 
 spring.datasource.hikari.driverClassName=${FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME:org.mariadb.jdbc.Driver}
 spring.datasource.hikari.jdbcUrl=${FINERACT_HIKARI_JDBC_URL:jdbc:mariadb://localhost:3306/fineract_tenants}
